--- a/public/css/style.css
+++ b/public/css/style.css
@@ -243,5 +243,16 @@
     padding:15px;
     font-size: 18px;
 }
-
+.top-bar2{
+    text-align: center;
+    padding-top: 10px;
+}
+.top-bar2 a{
+    text-decoration: none !important;
+    color: black;
+}
+.top-bar2 a:hover{
+    text-decoration: none !important;
+    color: rgb(57, 134, 221);
+}
 
